[package]
name = "ekvsb"
version = "0.0.7"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Benchmark Tool for Embedded Key-Value Stores available in Rust"
homepage = "https://github.com/sile/ekvsb"
repository = "https://github.com/sile/ekvsb"
readme = "README.md"
keywords = ["benchmark", "embedded-database"]
license = "MIT"

[dependencies]
byte-unit = "1"
cannyls = "0.9"
clap = "2"
futures = "0.1"
gnuplot = "0.0"
indicatif = "0.9"
percent-encoding = "1"
rand = "0.5"
rocksdb = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
siphasher = "0.2"
sled = "0.15"
trackable = { version = "0.2", features = ["serialize"] }
